Bug 446662 - Open document will set Brush Opacity to 100%
Summary: Open document will set Brush Opacity to 100%
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 5.0.0-beta5
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
: 440891 457104 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-12-08 04:17 UTC by Protoniv
Modified: 2023-06-21 00:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Protoniv 2021-12-08 04:17:40 UTC
SUMMARY
When open a file or create new file, a non-100% opacity brush will be change to 100% opacity.
If open a new document2 while the document1 is running, brush opacity will also set to 100% on document2
5.0.0-beta5-3a7f33d558
Document2 opacity 100% issue can also observed on 4.4.8

STEPS TO REPRODUCE
1. Create a new file, choose a brush without 100% opacity, e.g. c)Pencil-1 Hard 
2. Close the document, then open or create a new document, c)Pencil-1 Hard is now 100% opacity
*(Attitional)
3. Reset c)Pencil-1 Hard to Opacity 60%, create document2
4. Document2 will set brush opacity to 100%, while document1 remains 60%

OBSERVED RESULT
Brush will be set to 100% opacity after a document open.

EXPECTED RESULT
Brush should keep its default opacity.

SOFTWARE/OS VERSIONS
Windows: Windows 10 20H2

ADDITIONAL INFORMATION
Some more observation:
Krita 4.x cannot change opacity before opening a document.
Krita 5 can change opacity before opening a document, but has no effect on the selected brush after a document is open.
After close the document (not closing krita), the opacity will revert to the value before open a document.
Comment 1 Protoniv 2021-12-08 04:42:27 UTC
Open "first" document set opacity 100% after starting krita has been solved in 441865, and my "more observation" make no sense.
Though this bug still exist when following STEPS TO REPRODUCE
Comment 2 Dmitry Kazakov 2022-06-20 13:20:22 UTC
Git commit b676b8bc785136f316943c322fe99f3dfc4e1246 by Dmitry Kazakov.
Committed on 20/06/2022 at 13:20.
Pushed by dkazakov into branch 'master'.

Fix brush opacity being reset to 1.0 when a new document is created

The patch adds a set of checkes that verifies that the the preset
has not been changed too much before we say it the last time. Basically,
reloading the preset or overwriting it disables restoration of the
old opacity.

M  +39   -9    libs/ui/tool/kis_tool_paint.cc
M  +5    -2    libs/ui/tool/kis_tool_paint.h

https://invent.kde.org/graphics/krita/commit/b676b8bc785136f316943c322fe99f3dfc4e1246
Comment 3 Dmitry Kazakov 2022-06-20 13:21:51 UTC
Git commit 4e0329375c5855fe6e635ba412eadad2d95a90c8 by Dmitry Kazakov.
Committed on 20/06/2022 at 13:21.
Pushed by dkazakov into branch 'krita/5.1'.

Fix brush opacity being reset to 1.0 when a new document is created

The patch adds a set of checkes that verifies that the the preset
has not been changed too much before we say it the last time. Basically,
reloading the preset or overwriting it disables restoration of the
old opacity.

M  +39   -9    libs/ui/tool/kis_tool_paint.cc
M  +5    -2    libs/ui/tool/kis_tool_paint.h

https://invent.kde.org/graphics/krita/commit/4e0329375c5855fe6e635ba412eadad2d95a90c8
Comment 4 sh_zam 2022-07-26 11:18:46 UTC
*** Bug 457104 has been marked as a duplicate of this bug. ***
Comment 5 Freya Lupen 2023-06-21 00:48:33 UTC
*** Bug 440891 has been marked as a duplicate of this bug. ***