Fix brush opacity being reset to 1.0 when a new document is created

The patch adds a set of checkes that verifies that the the preset
has not been changed too much before we say it the last time. Basically,
reloading the preset or overwriting it disables restoration of the
old opacity.

BUG:446662